clusters/main/kubernetes/system/longhorn/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
      cert-manager.io/cluster-issuer: prod-dl
      cert-manager.io/private-key-rotation-policy: Always
      nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
      nginx.ingress.kubernetes.io/ssl-redirect: "true"    
      # traefik.frontend.passHostHeader: "false"
      # traefik.ingress.kubernetes.io/router.entrypoints: websecure
      # traefik.ingress.kubernetes.io/router.middlewares: traefik-chain-basic@kubernetescrd,traefik-private-range@kubernetescrd
      # traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: internal
  rules:
  - host: longhorn.${DOMAIN_0}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
  tls:
    - hosts:
      - longhorn.${DOMAIN_0}
      secretName: longhorn-tls-0
# status:
#     loadBalancer:
#       ingress:
#       - ip: ${TRAEFIK_IP}
